fix(automation): DUR-1 + HASH-1 — a for_duration trigger's expiry initiates its run; definition hashes are stable across JVM launches (ordered views in the eight collection-carrying records)
Why: MEASURE-1 measured both defects at 3d40b5f. A for_duration trigger published trigger_duration_expired and validated at expiry, but nothing after expire() reached a run initiator and the redelivered expired event matched no trigger — the documented "the trigger still fires" never happened (IR-22; T1 red: zero initiateRun calls after expiry). DefinitionHashes hashes a definition's toString(), and eight records stored their sets and maps through Set.copyOf/Map.copyOf, whose iteration order is salted per JVM launch — a two-role selector and a two-parameter command action each hashed to two values across eight launches, the two salts flipping independently, so definitionKey (a frozen v1.1.4 wire key on two reads) and the v1.1.5 conditions[].definition vouch guard were unstable across restarts for those definitions (IR-23).

What changed:
- core/automation/src/main/java/com/homesynapse/automation/StandardAutomationRegistry.java (M): a trigger carrying a forDuration is also indexed under trigger_duration_expired, so the engine's own expiry event reaches the automation that armed the timer; dedup collapses the double entry.
- core/automation/src/main/java/com/homesynapse/automation/StandardTriggerEvaluator.java (M): in evaluateMatches, an expired payload is the IMMEDIATE match of the trigger it names (automationId + triggerIndex, forDuration permits only) and never starts a timer; an EventTrigger keeps matching by type equality as before (a definition on that event type is loadable today and fired at HEAD); every other permit is shielded; initiation stays LIVE-only (D2), so a replayed expiry initiates nothing. forDurationOf is package-private for the registry's one call.
- core/automation/src/main/java/com/homesynapse/automation/{AreaSelector,LabelSelector,TypeSelector,SemanticTagS